lang/perl/Config-Pit/trunk/Changes:     Update Changes

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.01 -
+	 * Fix config filename to same as pit in ruby.
+	 * Avoid violate global switch of YAML::Syck.
 
 0.01 2008-01-09T19:19:31+09:00
 	First release.
