--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.02 -
 	 * Fix config filename to same as pit in ruby.
 	 * Avoid violating global switch (ImplicitTyping, SingleQuote) of YAML::Syck.
+	 * Fix 'ppit set' for interoperability.
 
 0.01 2008-01-09T19:19:31+09:00
 	First release.
