--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 	 * Fix config filename to same as pit in ruby.
 	 * Avoid violating global switch (ImplicitTyping, SingleQuote) of YAML::Syck.
 	 * Fix 'ppit set' for interoperability.
+	 * Export pit_set pit_switch.
 
 0.01 2008-01-09T19:19:31+09:00
 	First release.
