lang/perl/Config-Pit/trunk/t/01_basic.t, lang/perl/Config-Pit/trunk/t/02_interoperability.t, lang/perl/Config-Pit/trunk/lib/Config/Pit.pm, lang/perl/Config-Pit/trunk/Changes:     Add $Config::Pit::verbose flag.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
 	 * Avoid violating global switch (ImplicitTyping, SingleQuote) of YAML::Syck.
 	 * Fix 'ppit set' for interoperability.
 	 * Export pit_set pit_switch.
+	 * Add $Config::Pit::verbose flag.
 
 0.01 2008-01-09T19:19:31+09:00
 	First release.
