--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.03 -
+	 * Fix package to install currectly.
+
 0.02 2008-01-10T17:41:59+09:00
 	 * Fix config filename to same as pit in ruby.
 	 * Avoid violating global switch (ImplicitTyping, SingleQuote) of YAML::Syck.
